--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -186,18 +186,18 @@ block content
               .price_block-month 1 месяц
               .price_block-description Убедись в эффективности тренажера
               .price_block-price 3000 ₽     
-              button.price_btn Подписаться
+              button.subscribe_btn Подписаться
             .price_block
               .price_block-month 3 месяца
               .price_block-description Экономь 2 500 ₽ и получи первый LEVEL UP
               .price_block-price 6500 ₽
-              button.price_btn Подписаться
+              button.subscribe_btn Подписаться
             .price_block
               .price_block-month 6 месяцев
               .price_block-description Экономь 5 000 ₽ и <br> почувствуй рывок
               .price_block-price 13000 ₽
-              button.price_btn Подписаться
-          a.btn.price-btn Попробовать бесплатно    
+              button.subscribe_btn Подписаться
+          a.btn.price_btn Попробовать бесплатно    
 
       section.feedback#feedback 
         .container
